2016-06-24  Jakub Jelinek  <jakub@redhat.com>

	* internal-fn.c (expand_arith_set_overflow): New function.
	(expand_addsub_overflow, expand_neg_overflow, expand_mul_overflow):
	Use it.
	(expand_arith_overflow_result_store): Likewise.  Handle precision
	smaller than mode precision.
	* tree-vrp.c (extract_range_basic): For imag part, handle
	properly signed 1-bit precision result.
	* doc/extend.texi (__builtin_add_overflow): Document that last
	argument can't be pointer to enumerated or boolean type.
	(__builtin_add_overflow_p): Document that last argument can't
	have enumerated or boolean type.

2016-06-23  Michael Meissner  <meissner@linux.vnet.ibm.com>
	    Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/predicates.md (splat_input_operand): Rework.
	Don't allow constants, since the insns that use this predicate
	don't support constants.  Constants are handled by other insns
	that are created via combine.  During and after register
	allocation, only allow indexed or indirect addresses, and not
	general addresses.  Only allow modes supported by the hardware.
	* config/rs6000/rs6000.c (xxsplitb_constant_p): Update usage
	comment.  Move check for using VSPLTIS<x> to a common location,
	instead of doing it in two different places.

2016-06-23  Jocelyn Mayer  <l_indien@magic.fr>

	* config/i386/driver-i386.c (host_detect_local_cpu): Set
	PROCESSOR_PENTIUMPRO for signature_CENTAUR_ebx family >= 9.
	<case PROCESSOR_PENTIMUMPRO>: Pass c7 or nehemiah for
	signature_CENTAUR_ebx.

2016-06-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/66232
	PR target/67400
	* configure.ac (as_ix86_tls_ldm_opt): Renamed to ...
	(as_ix86_gas_32_opt): This.
	(ld_ix86_tls_ldm_opt): Renamed to ...
	(ld_ix86_gld_32_opt): This.
	(R_386_TLS_LDM reloc): Updated.
	(R_386_GOT32X reloc): New assembler/linker check.
	(HAVE_AS_IX86_GOT32X): New.  Defined to 1 if 32-bit assembler and
	linker support "jmp *_start@GOT" and "cmpl $0, bar@GOT".  Otherise,
	defined to 0.